--- a/src/app/modules/developer/Components/home/home.component.html
+++ b/src/app/modules/developer/Components/home/home.component.html
@@ -7,6 +7,94 @@
     <h1 class="display-4 text-white">Meet Our Talented Developers</h1>
   </div>
 </div>
+
+
+<section class="py-lg-8 py-5">
+  <div class="container py-lg-6">
+    <!--row-->
+    <div class="row mb-8">
+      <div class="col-12">
+        <div class="text-center d-flex flex-column g-2 mb-3">
+          <!--heading-->
+          <h2 class="mb-0 h1">Lets&nbsp;Get Started&nbsp;in 3 Easy Steps</h2>
+          <!--para-->
+          <p class="mb-0">Follow these three simple steps to get started with Long Term Mentorship</p>
+        </div>
+      </div>
+    </div>
+    <!--row-->
+    <div class="row ">
+      <div class="col-12">
+        <div class="row mb-8 align-items-center ">
+          <div class="col-md-6 offset-xxl-2 col-xxl-4 col-xl-5 offset-xl-1 mb-xxl-6">
+            <div class="d-flex flex-column g-4 me-4 ms-2">
+              <div class="border border-2 border-primary rounded-circle icon-shape icon-xl fs-3 text-primary mb-4">1</div>
+              <div class="d-flex flex-column g-2">
+                <!--heading-->
+                <h3 class="mb-0 h2 mb-3">Find Your Ideal Mentor</h3>
+                <!--para-->
+                <p class="mb-0 fs-3 mb-4">Browse from 600+ vested mentors and choose your ideal mentor according to your preferences</p>
+              </div>
+              <div>
+                <a href="#!" class="btn btn-outline-secondary">Shortlist Mentor</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-xxl-4 col-xl-6 mb-xxl-6">
+            <!--img-->
+            <div>
+              <img src="mento-step-one.jpg" alt="stpes 1" class="img-fluid rounded-4 w-100">
+            </div>
+          </div>
+        </div>
+        <div class="row mb-8 align-items-center gy-4 ">
+          <div class="col-md-6 col-xxl-4 offset-xxl-1 col-xl-5 offset-xl-1 order-md-1 order-2 mb-xxl-6">
+            <!--img-->
+            <div>
+              <img src="mento-step-two.jpg" alt="stpes 2" class="img-fluid rounded-4 w-100">
+            </div>
+          </div>
+          <div class="col-md-6 col-xxl-4 offset-xxl-1 col-xl-5 offset-xl-1 order-xl-2 order-1 mb-xxl-6 ">
+            <div class="d-flex flex-column gy-4">
+              <div class="border border-2 border-primary rounded-circle icon-shape icon-xl fs-3 text-primary mb-4">2</div>
+              <div class="d-flex flex-column g-0">
+                <!--heading-->
+                <h3 class="mb-0 h2 mb-3">Book a FREE Trial Session</h3>
+                <!--para-->
+                <p class="mb-0 fs-3 mb-4">Connect with mentor and see how mentor will help you achieve your goal faster, avoid asking referrals etc.</p>
+              </div>
+              <div>
+                <a href="#!" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#signupModal">Book a Free Trial</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row align-items-center gy-4 ">
+          <div class="col-md-6 offset-xxl-1 col-xxl-4 col-xl-5 offset-xl-1 mb-xxl-6">
+            <div class="d-flex flex-column g-4">
+              <div class="border border-2 border-primary rounded-circle icon-shape icon-xl fs-3 text-primary mb-4">3</div>
+              <div class="d-flex flex-column g-5 ">
+                <!--heading-->
+                <h3 class="mb-0 h2 mb-3">Learn, chat, and have fun</h3>
+                <!--para-->
+                <p class="mb-0 fs-3 mb-4">Bravo!! Get started with your personalised mentorship in the right direction with a mentor of your choice.</p>
+              </div>
+              <div>
+                <a href="#!" class="btn btn-outline-secondary">Meet the Mentor</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-xxl-4 col-xl-6 mb-xxl-6">
+            <!--img-->
+            <div>
+              <img src="mento-step-three.jpg" alt="stpes 3" class="img-fluid rounded-4 w-100">
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 <br>
 <br>
 <h3 class="display-4 fw-bold text-center" style="font-family: Edu AU VIC WA NT Hand, cursive;font-optical-sizing: auto;font-style: normal;">
@@ -14,6 +102,8 @@ Clients Feedbacks
 </h3>
 
 <div class="container mt-5">
+
+
   <div class="row">
     @for (item of clientsfeedbacks; track $index){
     <div class="col-md-4">
@@ -42,4 +132,10 @@ Clients Feedbacks
   <img src="iti logo_processed.png" class="image-size ms-3">
   <img src="minstrylogo.png" class="image-size ms-3">
 </div>
+
+
+
+
+
+
 
