--- a/src/app/modules/developer/Components/mentor-card/mentor-card.component.html
+++ b/src/app/modules/developer/Components/mentor-card/mentor-card.component.html
@@ -1,18 +1,17 @@
 <div class="card-client  row g-0">
- <!-- <div class="user-picture col-2 mt-5">
+  <!-- <div class="user-picture col-2 mt-5">
     <img src="http://localhost:5164/{{mentor.Image}}"  style="width: 100%; height: 100%; border-radius: 10px;">
   </div> -->
   <div class="user-picture col-2 mt-5">
-  <img 
-  src="http://localhost:5164/{{mentor.Image}}"  
-  style="width: 100%; height: 100%; border-radius: 10px;" 
-  onerror="this.onerror=null; this.src='http://localhost:5164/profile_images/Default.png';"
-></div>
+    <img src="http://localhost:5164/{{mentor.Image}}" style="width: 100%; height: 100%; border-radius: 10px;"
+      onerror="this.onerror=null; this.src='http://localhost:5164/profile_images/Default.png';">
+  </div>
 
   <div class="row  col-10 m-0 client" style="text-align: start;">
     <div class="d-flex col-12 justify-content-between">
       <div class="me-0 ms-0 mb-1">
-        <h2 class="name-client fw-bold mb-0 pb-0 mt-0 pt-0 " style="font-size: x-large; height: 45px; "><span>{{mentor.FirstName}}</span>&nbsp;<span>{{mentor.LastName}}</span>
+        <h2 class="name-client fw-bold mb-0 pb-0 mt-0 pt-0 " style="font-size: x-large; height: 45px; ">
+          <span>{{mentor.FirstName}}</span>&nbsp;<span>{{mentor.LastName}}</span>
         </h2>
         <p class="title-client fw-light mt-0 pt-0" style="font-size: smaller;"> {{mentor.Title}}</p>
         <!-- <div class="hidden">{{mentor.ID}}</div> -->
@@ -35,49 +34,49 @@
         <p class="category-client mt-5 col-2 ms-0"> {{mentor.YearsOfExperience}}yrs Exp</p>
 
 
-        <p class="category-client  col-3 mt-5"> Rate: <app-rate  [value]="mentor.AverageRate"></app-rate></p>
+        <p class="category-client  col-3 mt-5"> Rate: <app-rate [value]="mentor.AverageRate"></app-rate></p>
         <p class="price-client mt-5 col-3">Session Price: ${{ mentor.Price}}</p>
 
         <div class="social-media mt-0 pt-0 col-4 mb-5 mb-0 ps-5 ps-1" style="text-align: end;">
           @if(mentor.SocialAccounts.length>0){
 
-         
-            @for (user of mentor.SocialAccounts; track user.id; let index = $index)  {
+
+          @for (user of mentor.SocialAccounts; track user.id; let index = $index) {
           @if(mentor.SocialAccounts[index].SocialName==3){
-            <!-- <a href="http://localhost:5164/{{mentor.SocialAccounts[index].SocialLink}}"> -->
-            <a href="{{mentor.SocialAccounts[index].SocialLink}}">
-              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-                <path
-                  d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z" />
-              </svg>
-              <span class="tooltip-social">GitHub</span>
-            </a>
+          <!-- <a href="http://localhost:5164/{{mentor.SocialAccounts[index].SocialLink}}"> -->
+          <a href="{{mentor.SocialAccounts[index].SocialLink}}">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+              <path
+                d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z" />
+            </svg>
+            <span class="tooltip-social">GitHub</span>
+          </a>
           }
           @if(mentor.SocialAccounts[index].SocialName==1){
-            <!-- <a href="http://localhost:5164/{{mentor.SocialAccounts[index].SocialLink}}"> -->
-            <a href="{{mentor.SocialAccounts[index].SocialLink}}">
-              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
-                <path
-                  d="M504 256C504 119 393 8 256 8S8 119 8 256c0 123.78 90.69 226.38 209.25 245V327.69h-63V256h63v-54.64c0-62.15 37-96.48 93.67-96.48 27.14 0 55.52 4.84 55.52 4.84v61h-31.28c-30.8 0-40.41 19.12-40.41 38.73V256h68.78l-11 71.69h-57.78V501C413.31 482.38 504 379.78 504 256z">
-                </path>
-              </svg>
-              <span class="tooltip-social">Facebook</span>
-            </a>
+          <!-- <a href="http://localhost:5164/{{mentor.SocialAccounts[index].SocialLink}}"> -->
+          <a href="{{mentor.SocialAccounts[index].SocialLink}}">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+              <path
+                d="M504 256C504 119 393 8 256 8S8 119 8 256c0 123.78 90.69 226.38 209.25 245V327.69h-63V256h63v-54.64c0-62.15 37-96.48 93.67-96.48 27.14 0 55.52 4.84 55.52 4.84v61h-31.28c-30.8 0-40.41 19.12-40.41 38.73V256h68.78l-11 71.69h-57.78V501C413.31 482.38 504 379.78 504 256z">
+              </path>
+            </svg>
+            <span class="tooltip-social">Facebook</span>
+          </a>
           }
           @if(mentor.SocialAccounts[index].SocialName==2){
 
-            <!-- <a href="http://localhost:5164/{{mentor.SocialAccounts[index].SocialLink}}"> -->
-            <a href="{{mentor.SocialAccounts[index].SocialLink}}">
-              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
-                <path
-                  d="M100.28 448H7.4V148.9h92.88zM53.79 108.1C24.09 108.1 0 83.5 0 53.8a53.79 53.79 0 0 1 107.58 0c0 29.7-24.1 54.3-53.79 54.3zM447.9 448h-92.68V302.4c0-34.7-.7-79.2-48.29-79.2-48.29 0-55.69 37.7-55.69 76.7V448h-92.78V148.9h89.08v40.8h1.3c12.4-23.5 42.69-48.3 87.88-48.3 94 0 111.28 61.9 111.28 142.3V448z">
-                </path>
-              </svg>
-              <span class="tooltip-social">LinkedIn</span>
-            </a>
+          <!-- <a href="http://localhost:5164/{{mentor.SocialAccounts[index].SocialLink}}"> -->
+          <a href="{{mentor.SocialAccounts[index].SocialLink}}">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+              <path
+                d="M100.28 448H7.4V148.9h92.88zM53.79 108.1C24.09 108.1 0 83.5 0 53.8a53.79 53.79 0 0 1 107.58 0c0 29.7-24.1 54.3-53.79 54.3zM447.9 448h-92.68V302.4c0-34.7-.7-79.2-48.29-79.2-48.29 0-55.69 37.7-55.69 76.7V448h-92.78V148.9h89.08v40.8h1.3c12.4-23.5 42.69-48.3 87.88-48.3 94 0 111.28 61.9 111.28 142.3V448z">
+              </path>
+            </svg>
+            <span class="tooltip-social">LinkedIn</span>
+          </a>
           }
-        }
-        }
+          }
+          }
 
         </div>
       </div>
