--- a/src/app/modules/developer/Components/skill-instructions/skill-instructions.component.html
+++ b/src/app/modules/developer/Components/skill-instructions/skill-instructions.component.html
@@ -35,7 +35,7 @@
           <!-- Guidelines List -->
           <h6 class="mt-3">Timelines & Questions:</h6>
           <ul>
-            <li>Assessment Window: 03 Dec 23, 07:02 AM EEST to 31 Dec 25, 07:02 AM EEST</li>
+            <li>Assessment  Dec 23, 07:02 AM EEST to 31 Dec 25, 07:02 AM EEST</li>
             <li>Assessment Duration: 00:45:00 (hh:mm:ss)</li>
             <li>Total Questions to be answered: 30 Questions</li>
           </ul>
