--- a/src/app/shared/components/communication/communication.component.html
+++ b/src/app/shared/components/communication/communication.component.html
@@ -4,7 +4,7 @@
             <div class="col-xl-3 col-lg-12 col-md-12 col-12">
                 <div class="bg-white border-end border-top vh-100">
                     <!-- chat list -->
-                    <div class="chat-window">
+                    <div class="chat-w">
                         <div class="chat-sticky-header sticky-top bg-white">
                             <div class="px-4 pt-3 pb-4">
                                 <div class="d-flex justify-content-between align-items-center">
