--- a/src/app/shared/components/quizzes-details/quizzes-details.component.html
+++ b/src/app/shared/components/quizzes-details/quizzes-details.component.html
@@ -54,7 +54,7 @@
         <ul>
           <li>Assessment Duration: 00:45:00 (hh:mm:ss)</li>
           <li>Total Questions to be answered: 30 Questions</li>
-          <li>You can attempt the assessment anytime between the provided assessment window.</li>
+          <li>You can attempt the assessment anytime between the provided assessment .</li>
           <li>Ensure that you attempt the assessment in one sitting as the timer won’t stop once you start.</li>
         </ul>
 
