--- a/src/app/modules/developer/Components/contact-us/contact-us.component.html
+++ b/src/app/modules/developer/Components/contact-us/contact-us.component.html
@@ -49,7 +49,7 @@
                   hyphens.
                 </div>
               </div>
-              <div class="mb-3">
+              <!-- <div class="mb-3">
                 <label for="password" class="form-label">Password</label>
                 <input formControlName="password" type="password" class="form-control" id="password"
                   (blur)="onBlur('password')" [ngClass]="{
@@ -63,7 +63,7 @@
                   Password must contain at least 8 characters, including uppercase, lowercase, number, and special
                   character.
                 </div>
-              </div>
+              </div> -->
               <div class="mb-3">
                 <label for="phonenumber" class="form-label">Phone Number</label>
                 <input formControlName="phonenumber" type="text" class="form-control" (blur)="onBlur('phonenumber')"
