--- a/src/app/modules/developer/Components/profile-side-bar/profile-side-bar.component.css
+++ b/src/app/modules/developer/Components/profile-side-bar/profile-side-bar.component.css
@@ -1,7 +1,7 @@
 
 .sidenav {
   background-color: #ffffff;
-  padding: 15px;
+  /* padding: 15px; */
   height: 100vh;
   width: 250px;
   position: fixed;
