--- a/src/app/modules/developer/Components/profile-side-bar/profile-side-bar.component.html
+++ b/src/app/modules/developer/Components/profile-side-bar/profile-side-bar.component.html
@@ -85,7 +85,7 @@
   </div>
 </nav> -->
 
-<nav class="navbar navbar-expand-md shadow mb-4 mb-lg-0 sidenav">
+<nav class="navbar navbar-expand-md shadow mb-4 mb-lg-0 sidenav ps-3">
   <a class="d-xl-none d-lg-none d-md-none text-inherit fw-bold" href="#">Menu</a>
 
   <button
