--- a/src/app/modules/developer/Components/query-answer/query-answer.component.html
+++ b/src/app/modules/developer/Components/query-answer/query-answer.component.html
@@ -1,236 +1,158 @@
 <section class="pt-5 pb-5 ">
-    <div class="container">
-        <!-- User info -->
-        <div class="row align-items-center">
-            <div class="col-xl-12 col-lg-12 col-md-12 col-12">
-                <!-- Bg -->
-                <div class="rounded-top"
-                    style="background: url(profile-bg.jpg) no-repeat; background-size: cover; height: 100px"></div>
-                <div class="card px-4 pt-2 pb-1 shadow-sm rounded-top-0 rounded-bottom-4 rounded-bottom-md-2">
-                    <div class="d-flex align-items-end justify-content-between">
-                        <div class="d-flex align-items-center">
-                            <div class="me-2 position-relative d-flex justify-content-end align-items-end mt-n5">
-                                <img src="05 (1).jpg" class="avatar-xl rounded-circle border border-4 border-white"
-                                    style="height: 110px; size: 10px;" alt="avatar">
-                            </div>
-                            <div class="lh-1">
-                                <h2 class="mb-0">
-                                    Stella Flores
-                                    <a href="#" data-bs-toggle="tooltip" data-placement="top" aria-label="Beginner"
-                                        data-bs-original-title="Beginner">
-                                        <svg width="16" height="16" viewBox="0 0 16 16" fill="none"
-                                            xmlns="http://www.w3.org/2000/svg">
-                                            <rect x="3" y="8" width="2" height="6" rx="1" fill="#754FFE"></rect>
-                                            <rect x="7" y="5" width="2" height="9" rx="1" fill="#DBD8E9"></rect>
-                                            <rect x="11" y="2" width="2" height="12" rx="1" fill="#DBD8E9"></rect>
-                                        </svg>
-                                    </a>
-                                </h2>
-                                <p class="mb-0 d-block">stellaflores</p>
-                            </div>
+    <!-- <div class="container"> -->
+    <!-- User info -->
+
+
+
+
+
+
+
+
+
+
+
+
+    <!-- Content -->
+
+    <div class=" mt-0 mt-md-4 ">
+        <!--  -->
+
+
+
+        <div class="">
+            <!-- Card -->
+
+
+            <div class="card border-0">
+                <!-- Card header -->
+                @if(mentor){
+
+                <div id="ps-0 mb-5">
+                    <div class="comment pe-5 ps-2 pt-2 ">
+                        <!-- <img src="{{userQueries[0].MentorImageUrl}}"
+                            class="avatar-xl rounded-circle border border-4 border-white"
+                            style="height: 70px; size: 6px;" alt="avatar"> -->
+
+                        <img src="{{mentor.Image}}" class="avatar-xl rounded-circle border border-4 border-white"
+                            style="height: 70px; size: 6px;" alt="avatar">
+                        <div class="comment-content">
+
+                            <p class="mt-2"><strong>{{ mentor.FirstName }} {{mentor.LastName}}
+                                </strong>
+                            </p>
+
                         </div>
-                        <div>
-                            <a href="" class="btn btn-outline-primary btn-sm mb-3 p-0 ms-2 btn-account p-2">Account
-                                Setting</a>
-                        </div>
+
                     </div>
                 </div>
-            </div>
-        </div>
+                }
+                <div class="card-header d-lg-flex justify-content-between align-items-center mt-4">
 
-        <!-- Content -->
+                    <div class="mb-3 mb-lg-0">
 
-        <div class="row mt-0 mt-md-4 ">
-            <div class="col-lg-3 col-md-4 col-12">
-                <!-- Side navbar -->
-                <nav class="navbar navbar-expand-md shadow  mb-4 mb-lg-0 sidenav">
-                    <!-- Menu -->
-                    <a class="d-xl-none d-lg-none d-md-none text-inherit fw-bold" href="#">Menu</a>
-                    <!-- Button -->
-                    <button class="navbar-toggler d-md-none icon-shape icon-sm rounded bg-primary text-light"
-                        type="button" data-bs-toggle="collapse" data-bs-target="#sidenav" aria-controls="sidenav"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="fe fe-menu"></span>
-                    </button>
-                    <!-- Collapse navbar -->
-                    <div class="collapse navbar-collapse" id="sidenav" style="box-shadow: 50px !important; ">
-                        <div class="navbar-nav flex-column">
-                            <span class="navbar-header fw-bold">Questions</span>
-                            <ul class="list-unstyled ms-n2 mb-4">
-                                <!-- Nav item -->
-                                <li class="nav-item active">
-                                    <a class="nav-link" href="">
-                                        <i class="fa-solid fa-file-circle-question"></i>
-                                        My queres
-                                    </a>
-                                </li>
-                                <!-- Nav item -->
-
-                                <!-- Nav item -->
-                                <li class="nav-item">
-                                    <a class="nav-link" href="">
-                                        <i class="fa-solid fa-rotate-left"></i>
-                                        My Quiz Attempt
-                                    </a>
-                                </li>
-                            </ul>
-                            <!-- Navbar header -->
-                            <span class="navbar-header fw-bold">Account Settings</span>
-                            <ul class="list-unstyled ms-n2 mb-0">
-                                <!-- Nav item -->
-                                <li class="nav-item">
-                                    <a class="nav-link" href="">
-                                        <i class="fa-solid fa-pen-to-square"></i>
-                                        Edit Profile
-                                    </a>
-                                </li>
-                                <!-- Nav item -->
-                                <li class="nav-item">
-                                    <a class="nav-link" href="">
-                                        <i class="fa-solid fa-lock"></i>
-                                        Security
-                                    </a>
-                                </li>
-                                <!-- Nav item -->
-                                <li class="nav-item">
-                                    <a class="nav-link" href="">
-                                        <i class="fa-solid fa-user"></i>
-                                        Social Profiles
-                                    </a>
-                                </li>
-                                <!-- Nav item -->
-                                <li class="nav-item">
-                                    <a class="nav-link" href="">
-                                        <i class="fa-solid fa-bell"></i>
-                                        Notifications
-                                    </a>
-                                </li>
-                                <!-- Nav item -->
-                                <li class="nav-item">
-                                    <a class="nav-link" href="">
-                                        <i class="fa-solid fa-user-lock"></i>
-                                        Profile Privacy
-                                    </a>
-                                </li>
-                                <!-- Nav item -->
-                                <li class="nav-item">
-                                    <a class="nav-link" href="">
-                                        <i class="fa-solid fa-trash-can"></i>
-                                        Delete Profile
-                                    </a>
-                                </li>
-                                  <!-- Nav item -->
-                                <li class="nav-item">
-                                    <a class="nav-link" href="">
-                                        <i class="fa-solid fa-right-from-bracket"></i>
-                                        Sign Out
-                                    </a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </nav>
-            </div>
-
-
-
-            <div class="col-lg-9 col-md-8 col-12">
-                <!-- Card -->
-                <div class="card border-0">
-                    <!-- Card header -->
-
-
-                    <div id="ps-0 mb-5">
-                        <div class="comment pe-5 ps-2 pt-2 ">
-                            <img src="66b372a33d0f5.webp"
-                                class="avatar-xl rounded-circle border border-4 border-white"
-                                style="height: 70px; size: 6px;" alt="avatar">
-
-                            <div class="comment-content">
-
-                                <p class="mt-2"><strong>Harshad Sawant </strong>
-                                    Career Development | Career Growth | Leadership | Career Coaching |
-                                    Career Advice </p>
-
-                            </div>
-
-                        </div>
-                    </div>
-
-                    <div class="card-header d-lg-flex justify-content-between align-items-center mt-4">
-
-                        <div class="mb-3 mb-lg-0">
-
-                            <h3 class="mb-0">Answers</h3>
-
-                        </div>
+                        <h3 class="mb-0">Answers</h3>
 
                     </div>
-                    <!-- Card body -->
-                    <div class="card-body">
-                        <div class="border-bottom pt-0 pb-0">
+
+                </div>
+                <!-- Card body -->
+                <div class="card-body">
+                    <div class="border-bottom pt-0 pb-0">
+                        <div class=" ">
+                            <!-- @for(query of userQueries; track $index; let index = $index){ -->
 
 
-                            <div class=" ">
-                                <div class=" mb-2 mb-lg-0  pb-3 gap-0 ">
-                                    <span class=" ">Answered On : </span>
-                                    <span class="mb-0 ">Oct 1, 2020</span>
-                                </div>
+                            <div>
 
-                                        <div id="ps-0 ">
-                                            <div class="answer pe-5 ps-2 pt-2 mb-3 ">
-                                                <div class="comment-content">
+                                @for(query of userQueries; track $index;  let index = $index){
+                                <div id="ps-0 ">
 
-                                                    <div class="comment-actions">
+                                    <div class="answer pe-5 ps-2 pt-2 mb-3 ">
+                                        <div class="comment-content">
 
-                                                        <div class="mt-3 me-5 ">
-                                                            <p><strong class="ms-2">Your Query : </strong> Lorem ipsum dolor, sit amet consectetur
-                                                                adipisicing elit. Deserunt at iusto fugiat aliquid nobis sint.
-                                                                </p>
 
-                                                        </div>
-                                                    </div>
+                                            <div class=" mb-0 mb-lg-0 mt-3 pb-1 gap-0 ps-3 text-muted">
+
+                                                <span class=" ">Answered On : </span>
+                                                <span class="mb-0 ">({{ query.DateTime | date: 'dd MMM yyyy'}})   at   {{ query.DateTime | date: 'hh:mm a' }}</span>
+                                            </div>
+
+                                            <div class="comment-actions">
+
+                                                <div class="mt-3 me-5 ">
+                                                    <p><strong class="ms-2"><img src="{{query.UserImageUrl}}"
+                                                                class="avatar-xl rounded-circle border border-4 border-white"
+                                                                style="height: 70px; size: 6px;" alt="avatar"> </strong>
+                                                        {{ query.Question }}
+                                                    </p>
+
                                                 </div>
                                             </div>
                                         </div>
-
+                                    </div>
+                                </div>
+                                }
+                                @for(query of userQueries; track $index;  let index = $index){
+                                @if(mentor.FirstName == query.FirstName){
+                              
                                 <div id="ps-0">
-                                    <div class="answer pe-5 ps-2 pt-2 ">
+                                    <div class="answer pe-5 ps-2 pt-2 text-muted">
                                         <div class="comment-content">
+                                            <div class=" mb-0 mb-lg-0 mt-3 pb-1 gap-0 ps-3">
+                                                <span class=" ">Answered On : </span>
+                                                <!-- <span class="mb-0 ">{{query.DateTime}}</span> -->
+                                                <span class="mb-0  ">({{ query.DateTime | date: 'dd MMM yyyy'}})   at   {{ query.DateTime | date: 'hh:mm a' }}</span>
+
+                                            </div>
+
 
                                             <div class="comment-actions">
 
                                                 <div class="mt-3 me-5 ms-2">
-                                                    <p class="ms-2"><strong class="">Ansewr : </strong> Lorem ipsum dolor, sit amet consectetur
-                                                        adipisicing elit. Deserunt at iusto fugiat aliquid nobis sint.
-                                                           out.</p>
+                                                    <p class="ms-2"><strong class=""><img src="{{mentor.Image}}"
+                                                                class="avatar-xl rounded-circle border border-4 border-white"
+                                                                style="height: 70px; size: 6px;" alt="avatar"></strong>
+                                                        {{query.QueryAnswers[index].Answer}}</p>
 
-                                                        <button class="btn btn-outline-primary btn-sm ms-0  "
-                                                            style="border-radius: 25px;"
-                                                            (click)="downloadFile()">Download
-                                                            File</button>
+                                                    <a class="btn btn-outline-primary btn-sm ms-0  "
+                                                        style="border-radius: 25px;"
+                                                        href="http://localhost:5164/{{query.QueryAnswers[index].File}}"
+                                                        download="true">Download
+                                                        File</a>
 
                                                 </div>
                                             </div>
-
+                                            
 
                                         </div>
 
                                     </div>
-
+                                
                                 </div>
-                                <div>
+                            }
+                            }
+                            </div>
+
+                            <!-- } -->
+
+
+
+                            <div>
+
+                                <form (ngSubmit)="submitQuery()" [formGroup]="queryForm">
                                     <h5 class="mt-4">Ask your query*</h5>
                                     <p class=" text-muted">You can also edit this once payment is done</p>
-                                    <textarea class="form-control mb-3 p-4" id="validationTextarea" placeholder="Query"
-                                        required></textarea>
+                                    <!-- <textarea class="form-control mb-3 p-4" formControlName="Question"
+                                        id="validationTextarea" placeholder="Query" required></textarea> -->
 
-
+                                        <textarea class="form-control mb-3 p-4" id="validationTextarea" placeholder="Query"
+                                        formControlName="Question" required></textarea>
 
                                     <h5 class=" mt-3">Attach file</h5>
                                     <p class="text-muted">Accepted file types are pdf, doc. It should not be more than
                                         50 MB.</p>
-                                    <div class="upload-container border p-3 text-center row">
+                                    <!-- <div class="upload-container border p-3 text-center row">
                                         <input type="file" id="file-upload" class="upload-input text-center"
                                             (change)="onFileSelected($event)">
 
@@ -238,20 +160,31 @@
                                             <i class="fa-solid fa-cloud-arrow-up"></i>
                                             <p class="upload-text">Click here to upload File</p>
                                         </label>
-                                    </div>
-                                    <a class="mb-3 p-2 px-5 mt-3 btn btn-outline-primary btn-sm ms-0" >Send</a>
-                                </div>
+                                    </div> -->
+
+
+                                    <div class="upload-container border p-3 text-center">
+                                        <input type="file" id="file-upload" (change)="onFileSelected($event)" class="upload-input">
+                                        <label for="file-upload" class="upload-label">
+                                          <i class="fa-solid fa-cloud-arrow-up"></i>
+                                          <p class="upload-text">Click here to upload File</p>
+                                        </label>
+                                      </div>
+                                      <button class="btn btn-primary btn-block mt-2 ps-5 pe-5 mt-2" type="submit">Send</button>
+                                    <!-- <a class="mb-3 p-2 px-5 mt-3 btn btn-outline-primary btn-sm ms-0"
+                                        type="submit">Send</a> -->
+                                </form>
                             </div>
 
                         </div>
+
                     </div>
                 </div>
             </div>
+
         </div>
 
     </div>
+
+    <!-- </div> -->
 </section>
-
-
-
-
